src/styles/Hero.css
.hero-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  user-select: none;
  position: relative;
}

.hero-section > .hero-data-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.hero-section > .hero-data-container > h1 {
  font-weight: bold;
  color: var(--clr-300);
}

.hero-section > .hero-data-container > h2 {
  color: var(--clr-900);
}

.hero-section > .hero-data-container > h2 > span {
  text-decoration: underline;
  text-underline-offset: 0.5rem;
  text-decoration-color: var(--clr-300);
  text-decoration-thickness: 0.2rem;
}

.hero-section > .hero-data-container > h3 {
  color: var(--clr-900);
}

.hero-section > .cta-container {
  display: flex;
}

.hero-section > .scrollAnimation {
  cursor: pointer;
}

.hero-section > .social-links-container {
  display: flex;
  flex-direction: column;
}

.hero-section > .social-links-container > a {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: white;
  border: 1px solid var(--clr-300);
  border-radius: 50%;
  padding: 0.75rem;
  z-index: 100;
  position: relative;
}

.hero-section > .social-links-container > a::after {
  content: attr(data-title);
  position: absolute;
  left: 3.5rem;
  top: 50%;
  text-align: left;
  transform: translateY(-50%);
  color: var(--clr-100);
  padding-inline: 0.5rem;
  padding-block: 0.25rem;
  font-weight: bold;
  background-color: var(--clr-900);
  display: none;
}

.hero-section > .social-links-container::before {
  content: "";
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  width: 0.2rem;
  height: 130%;
  background-color: var(--clr-300);
}

.hero-section > .social-links-container > a > img {
  width: 1.5rem;
}

@media (min-width: 2560px) {
  .hero-section > .social-links-container {
    display: none;
  }
}

@media (min-width: 1024px) {
  .hero-section {
    gap: 2rem;
    height: calc(100vh - 4rem);
    background-image: url("../assets/background_desktop.svg");
    background-size: contain;
    background-position: center;
    background-repeat: repeat;
    transition: background-position 3s ease-out;
  }
  .hero-section > .scrollAnimation {
    width: 1rem;
  }
  .hero-section > .hero-data-container > h1 {
    font-size: 3rem;
  }

  .hero-section > .hero-data-container > h2 {
    font-size: 1.5rem;
  }

  .hero-section > .hero-data-container > h3 {
    font-size: 1rem;
  }
  .hero-section > .cta-container {
    gap: 1.5rem;
    margin-block: 2rem;
  }
  .hero-section > .social-links-container {
    position: fixed;
    bottom: 4rem;
    left: 4rem;
    gap: 1rem;
  }
  .hero-section > .social-links-container > a:hover::after {
    display: block;
  }
}

@media (prefers-reduced-motion) {
  .hero-section {
    transition: background-position 5000ms ease-out;
  }
}

@media (min-width: 769px) and (max-width: 1023px) {
  .hero-section {
    gap: 2rem;
    height: calc(100vh - 4rem);
    background-image: url("../assets/background_desktop.svg");
    background-size: contain;
    background-position: center;
    background-repeat: repeat;
    animation: moveBG 30s ease-in-out infinite alternate;
  }
  .hero-section > .scrollAnimation {
    width: 1rem;
  }
  .hero-section > .hero-data-container > h1 {
    font-size: 2rem;
  }

  .hero-section > .hero-data-container > h2 {
    font-size: 1rem;
  }

  .hero-section > .hero-data-container > h3 {
    font-size: 0.8rem;
  }
  .hero-section > .cta-container {
    gap: 1rem;
    margin-block: 1rem;
  }
  .hero-section > .social-links-container {
    position: fixed;
    bottom: 2rem;
    left: 2rem;
    gap: 1rem;
  }
}

@media (max-width: 768px) {
  .hero-section {
    gap: 2rem;
    /* height: calc(100vh - 3rem); */
    height: 90vh;
    background-image: url("../assets/background_mobile.svg");
    background-size: cover;
    background-position: center;
    background-repeat: repeat;
    animation: moveBG 30s ease-in-out infinite alternate;
  }
  .hero-section > .scrollAnimation {
    width: 1rem;
  }
  .hero-section > .hero-data-container > h1 {
    font-size: 2rem;
  }

  .hero-section > .hero-data-container > h2 {
    font-size: 1rem;
  }

  .hero-section > .hero-data-container > h3 {
    font-size: 0.8rem;
  }
  .hero-section > .cta-container {
    gap: 1rem;
    margin-block: 1rem;
  }
  .hero-section > .social-links-container > a {
    padding: 0.5rem;
  }
  .hero-section > .social-links-container > a > img {
    width: 1rem;
  }
  .hero-section > .social-links-container::before {
    height: 115%;
  }
  .hero-section > .social-links-container {
    position: absolute;
    bottom: 2rem;
    right: 2rem;
    gap: 1rem;
  }
}

@keyframes moveBG {
  0% {
    background-position: 0rem 0rem;
  }
  25% {
    background-position: -2rem 3rem;
  }
  50% {
    background-position: 0rem -2rem;
  }
  75% {
    background-position: 3rem 2rem;
  }
  100% {
    background-position: 0rem 0rem;
  }
}

